--- a/Gerenciamento/src/system/visao/TelaLogin.form
+++ b/Gerenciamento/src/system/visao/TelaLogin.form
@@ -89,7 +89,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/imagens/papel.jpg"/>
+          <Image iconType="2" name="C:\xampp\htdocs\GereenciamentoEscolar\Gerenciamento\src\imagens\papel.jpg"/>
         </Property>
       </Properties>
       <Constraints>
